--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+================================
+THIS REPOSITORY WILL BE RETIRED.
+================================
+
 Buildroot is a simple, efficient and easy-to-use tool to generate embedded
 Linux systems through cross-compilation.
 
